# flask_practice

./: config.py  flask_app.py  pyproject.toml  setup.sh
app/: __init__.py
app/main/: forms.py  views.py
app/templates/: home.html  template.html
